Bug 144642 - Ctrl-X does nothing in Album GUI
Summary: Ctrl-X does nothing in Album GUI
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Keyboard (other bugs)
Version First Reported In: 0.9.3
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-04-25 10:58 UTC by Mikolaj Machowski
Modified: 2017-08-15 05:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikolaj Machowski 2007-04-25 10:58:16 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

Ctrl-X does nothing in Album GUI.

According to KDE HIG it should cut selected items.

Ctrl-C and Ctrl-P works so also third shortcut of this trinity should work.

Another shortcut for this action is: Shift-Delete
Comment 1 caulier.gilles 2008-12-05 12:40:46 UTC
Note Cut is not yet implemented...

Gilles
Comment 2 Thomas Damgaard 2009-08-23 20:51:18 UTC
Isn't this almost trivial to implement?
Or am I missing something?
Comment 3 Andi Clemens 2009-10-20 13:50:59 UTC
Shift+Delete is implemented, cut shouldn't be hard... I'll take a look at it.
Comment 4 Andi Clemens 2009-10-20 15:08:28 UTC
SVN commit 1038001 by aclemens:

Implement CUT action in DigikamView

BUG:144642

 M  +6 -0      contextmenuhelper.cpp  
 M  +8 -0      contextmenuhelper.h  
 M  +33 -1     digikamimageview.cpp  
 M  +8 -0      digikamimageview.h  
 M  +1 -2      digikamimageview_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1038001