Implement CUT action in DigikamView

BUG:144642

svn path=/trunk/extragear/graphics/digikam/; revision=1038001